--- a/Upload/src/upload/Send.form
+++ b/Upload/src/upload/Send.form
@@ -118,6 +118,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Enviar Fotografia"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEnviarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnBuscar">
           <Properties>
